@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -59,7 +59,6 @@ import static com.sun.javatest.regtest.RStatus.*;
  * This class implements the "applet" action as described by the JDK tag
  * specification.
  *
- * @author Iris A Garcia
  * @see Action
  */
 public class AppletAction extends Action
@@ -160,7 +159,7 @@ public class AppletAction extends Action
 
     @Override
     public Set<File> getSourceFiles() {
-        return Collections.singleton(new File(script.absTestSrcDir(), htmlFN));
+        return Set.of(script.absTestSrcDir().resolve(htmlFN).toFile());
     }
 
     /**
@@ -238,7 +237,7 @@ public class AppletAction extends Action
         // "test.src" and "test.classes", respectively"
         List<String> command = new ArrayList<>(6);
         Map<String, String> env = new LinkedHashMap<>();
-        command.add(script.getJavaProg());
+        command.add(script.getJavaProg().toString());
         command.add("-classpath");
         command.add(execPaths.get(PathKind.CLASSPATH).toString());
 
@@ -296,7 +295,7 @@ public class AppletAction extends Action
 
             // RUN THE APPLET WRAPPER CLASS
             ProcessCommand cmd = new ProcessCommand();
-            cmd.setExecDir(script.absTestScratchDir());
+            cmd.setExecDir(script.absTestScratchDir().toFile());
 
             // Set the exit codes and their associated strings.  Note that we
             // require the use of a non-zero exit code for a passed test so
@@ -404,7 +403,7 @@ public class AppletAction extends Action
             String line;
             StringBuilder sb = new StringBuilder();
             //String htmlFN = script.relTestSrcDir() + FILESEP + args[0];
-            htmlFN = new File(script.absTestSrcDir(), htmlFN).getPath();
+            htmlFN = script.absTestSrcDir().resolve(htmlFN).toString();
             try (BufferedReader in = new BufferedReader(new FileReader(htmlFN))) {
                 while ((line = in.readLine()) != null) {
                     sb.append(line);
@@ -638,7 +637,7 @@ public class AppletAction extends Action
 
     //----------member variables---------------- --------------------------------
 
-    private String  manual   = "unset";
+    private String  manual   = "unset"; // or "novalue", "done", "yesno"
     private boolean reverseStatus = false;
     private boolean othervm  = false;
     private int     timeout  = -1;
